<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/search"
        android:title="@string/nav_search" />
    <item
        android:id="@+id/nav_trend"
        android:icon="@drawable/trend"
        android:title="@string/nav_trend" />
    <item
        android:id="@+id/nav_notif"
        android:icon="@drawable/notification"
        android:title="@string/nav_notif" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/profile"
        android:title="@string/nav_profile" />
</menu>